--- a/social_network/main/templates/edit/edit_form.html
+++ b/social_network/main/templates/edit/edit_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
+<!-- {% load static %}
 
 {% block content %}
 
@@ -45,17 +45,17 @@
                 <h4 class="upload-title">Публікація</h4>
                 <img class = "planer-image" src="{% static 'images/icons/PlaneR.png' %}" alt="">
             </button>
-        <!-- {% for field in form %}
+        {% for field in form %}
             {{ field.label_tag }}
             {{ field }}
             {{ field.errors }}
-        {% endfor %} -->
-        <!-- <button style="margin-top: 50px;">Редагувати</button> -->
+        {% endfor %}
+        <button style="margin-top: 50px;">Редагувати</button>
     </form>
     </div>
     
 </div>
     
-{% endblock %}
+{% endblock %} -->
 
 
