--- a/social_network/registration/static/authorithation/css/style.css
+++ b/social_network/registration/static/authorithation/css/style.css
@@ -1,71 +1,75 @@
 .registration-frame{
+    top: 0px;
+    position: absolute;
+    transform: translate(0%, 6%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 36px;
-    width: 437px;
-    height: 600px;
+    gap: calc(1.25vw + 1.75vh);
+    width: calc(17vw + 24vh);
+    height: calc(23vw + 32vh);
     background-color: white;
-    border-radius: 20px;
-    padding: 44px;
-    margin-left: 350px;
+    border-radius: calc(0.69vw + 0.97vh);
+    padding: calc(1.52vw + 2.14vh);
+    margin-left: calc(12.1vw + 17.2vh);
     position: relative;
     z-index: 2;
 }
 .body{
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 88%;
+    width: calc(14vw + 20vh);
+    height: calc(22.8vw + 32vh)
 }
 .reg-or-log-frame{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    flex-wrap: wrap;
-    font-size: 14px;
-    height: 47px;
+    flex-wrap: nowrap;
+    font-size: calc(0.69vw + 0.97vh);
+    height: calc(0.69vw + 0.97vh);
+    gap: calc(0.8vw + 1.2vh);
 }
 .join-worldit{
-    font-size: 24px;
-    font-weight: 500;
+    font-size: calc(0.83vw + 1.17vh);
+    font-weight: calc(17.3vw + 24.4vh);
 }
 .registration-form{
     display: flex;
     flex-direction: column;
-    gap: 26px;
+    gap: calc(0.9vw + 1.2vh)
 }
 .image{
-    width: 679px;
-    height: 527px;
+    width: calc(23vw + 33vh);
+    height: calc(18.2vw + 26.2vh);
 }
 .background-image{
     position: absolute;
-    width: 679px;
-    height: 527px;
-    margin-left: 700px;
+    width: calc(23.5vw + 33.5vh);
+    height: calc(18.2vw + 26.2vh);
+    margin-left: calc(26.8vw + 36.2vh);
     z-index: 1;
 }
 .inputs{
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: calc(0.5vw + 0.7vh)
 }
 .input{
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    gap: calc(0.20vw + 0.29vh);
 }
 button{
-    width: 311px;
-    height: 52px;
-    border-radius: 1234px;
+    width: calc(13.9vw + 19.6vh);
+    height: calc(1.8vw + 2.6vh);
+    border-radius:calc(42vw + 60vh);
     border: none;
     background-color: rgba(84, 60, 82, 1);
-    font-size: 16px;
+    font-size:calc(0.55vw + 0.78vh);
     color: white;
-    margin-left: 18px;
+    font-weight: 500;
 }
 button:hover{
     cursor: pointer;
@@ -73,30 +77,38 @@ button:hover{
     color: rgb(228, 228, 228);
 }
 .line{
-    margin-left: 182px;
-    width: 165px;
-    height: 1px;
+    margin-left: calc(6.3vw + 8.8vh);
+    width: calc(6vw + 8.3vh);
+    height: calc(0.03vw + 0.04vh);
     background-color: rgba(84, 60, 82, 1);
 }
 
 .authorithation-title{
-    color: rgba(129, 129, 141, 1);
+    color: rgba(129, 129, 141, 1)    ;
     font-weight: 500;
-    font-size: 30px;
-    height: 39px;
+    font-size: calc(1.2vw + 1.6vh);
+    height:calc(1.3vw + 1.9vh);
+    gap: calc(0.27vw + 0.4vh);
 }
 .authorithation-title:hover{
     color: rgb(104, 104, 112);
     cursor: pointer;
 }
 .registration-title{
-    font-size: 30px;
-    height: 39px;
+    font-size: calc(1.2vw + 1.6vh);
+    height: calc(1.3vw + 1.8vh);
+    font-weight: 700;
+    color: black;
+    text-decoration: underline;
 }
 
 input{
-    height: 42px;
-    border-radius: 10px;
+    width: calc(13.9vw + 19.6vh);
+    height: calc(1.4vw + 2vh);
+    border-radius: calc(0.3vw + 0.4vh);
+    font-size: calc(0.5vw + 0.8vh);
+    padding: calc(0.5vw + 0.8vh) calc(0.3vw + 0.5vh);
+    border: calc(0.03vw + 0.05vh) black solid;
 }
 a{
     all: unset;
@@ -105,29 +117,39 @@ a:hover{
     cursor: pointer;
 }
 .join-qr{
-    font-size: 15px;
+    font-size: calc(0.5vw + 0.7vh);
     font-weight: 400;
-    height: 18px;
+    height: calc(0.6vw + 0.8vh);
 }
 .qr{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
+    gap: calc(0.8vw + 1.7vh);
 }
 .label-qr{
-    width: 400px;
-    height: 18px;
+    width: calc(13vw + 18vh);
+    height: calc(0.6vw + 0.8vh);
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: calc(0.5vw + 0.7vh)
 }
 .line-qr{
-    width: 55px;
-    height: 2px;
+    width: calc(1.9vw + 2.7vh);
+    height: calc(0.06vw + 0.08vh);
     background-color: rgba(129, 129, 141, 1);
 }
 li{
     color: red;
+}
+.id_email{
+    font-weight: 500;
+}
+.image-qr{
+    width: calc(3.5vw + 4.9vh);
+    height: calc(3.5vw + 4.9vh);
+}
+label{
+    font-size: calc(0.5vw + 0.8vh);
 }
