--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class = "url">
                 <img src="{% static 'images/icons/settings.png' %}" alt="">
-                <a>Налаштування</a>
+                <a href = "{% url 'personal_information' %}">Налаштування</a>
             </div>
         </div>
         <div class = "button-exit">
