--- a/social_network/main/static/css/style.css
+++ b/social_network/main/static/css/style.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     gap: calc(0.2vw + 0.3vh);
-
+    padding-bottom: calc(0.5vw + 0.8vh);
 }
 .urls-frame{
     width: calc(27.9vw + 38vh);
@@ -348,15 +348,17 @@ h1, h2, h3, h4, h5, h6 {
     height: calc(3.1vw + 4.4vh);
     display: flex; 
     padding: calc(0.7vw + 1vh);
-    gap: calc(27.6vw + 38.5vh);
     justify-content: space-between;
+    width: calc(32vw + 45.2vh);
     align-items: center;
 }
+
 .people-logo-and-nick{
     display: flex;
     align-items: center;
     gap: calc(0.7vw + 1vh);
 }
+
 .post-friend-avatar{
     width: calc(1.6vw + 2.6vh);
     height: calc(1.6vw + 2.6vh);
@@ -801,4 +803,36 @@ a{
     width: calc(7.5vw + 10.6vh);
     height: calc(8vw + 11vh);
     border-radius: calc(0.5vw + 0.7vh);
+}
+.all_tags{
+    display: flex;
+    width: calc(23.8vw + 33.6vh);
+    flex-wrap: wrap;
+    gap: calc(0.3vw + 0.5vh);
+}
+
+.tag-form{
+    padding: calc(0.2vw + 0.3vh);
+    background-color: #E9E5EE;
+    border: 0px black solid;
+    border-radius: calc(0.2vw + 0.3vh);
+    gap: calc(0.3vw + 0.5vh);
+    height:calc(0.9vw + 1.3vh);
+    color:#543C52;
+    font-size: calc(0.4vw + 0.6vh);
+    font-family: "GT Walsheim Pro";
+}
+.tag-form:hover{
+    background-color:#d3cbdd;
+    cursor: pointer;
+}
+.image-hashtag{
+    width: calc(0.7vw + 0.9vh);
+    height: calc(0.7vw + 0.9vh);
+}
+
+.button-hashtag{
+    all: unset;
+    width: calc(0.7vw+1vh);
+    height: calc(0.77vw+1vh);
 }
