--- a/social_network/registration/static/authorithation/css/style.css
+++ b/social_network/registration/static/authorithation/css/style.css
@@ -1,121 +1,124 @@
 .registration-frame{
-    top: 0px;
-    position: absolute;
-    transform: translate(0%, 6%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: calc(1.25vw + 1.75vh);
-    width: calc(17vw + 24vh);
-    height: calc(23vw + 32vh);
+    gap: calc(1.2vw + 1.7vh);
+    /* width: calc(16.9vw + 23.9vh); */
+    /* width: calc(15.1vw + 21.4vh);
+    height: calc(22.4vw + 31.8vh); */
+
     background-color: white;
-    border-radius: calc(0.69vw + 0.97vh);
-    padding: calc(1.52vw + 2.14vh);
-    margin-left: calc(12.1vw + 17.2vh);
+    border-radius: calc(0.6vw + 0.9vh);
+    padding: calc(1.1vw + 1.7vh);
+    margin-left: calc(12.1vw + 17.1vh);
     position: relative;
     z-index: 2;
 }
 .body{
     display: flex;
     align-items: center;
-    width: calc(14vw + 20vh);
-    height: calc(22.8vw + 32vh)
+    width: 100%;
+    height: 88%;
 }
 .reg-or-log-frame{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
-    flex-wrap: nowrap;
-    font-size: calc(0.69vw + 0.97vh);
-    height: calc(0.69vw + 0.97vh);
-    gap: calc(0.8vw + 1.2vh);
+    flex-wrap: wrap;
+    font-size: calc(0.4vw + 0.6vh);
+    height: calc(1.6vw + 2.3vh);
+    width: calc(13.8vw + 19.6vh);
 }
+
+.button-login{
+    width: calc(13.8vw + 19.6vh);
+    height: calc(1.8vw + 2.5vh);
+}
+
 .join-worldit{
-    font-size: calc(0.83vw + 1.17vh);
-    font-weight: calc(17.3vw + 24.4vh);
+    font-size: calc(0.8vw + 1.1vh);
+    font-weight: 500;
 }
 .registration-form{
     display: flex;
     flex-direction: column;
-    gap: calc(0.9vw + 1.2vh)
+    gap: calc(0.9vw + 1.2vh);
 }
+
 .image{
-    width: calc(23vw + 33vh);
-    height: calc(18.2vw + 26.2vh);
+    width: calc(23.5vw + 33.2vh);
+    height: calc(18.2vw + 25.8vh);
 }
 .background-image{
     position: absolute;
-    width: calc(23.5vw + 33.5vh);
-    height: calc(18.2vw + 26.2vh);
-    margin-left: calc(26.8vw + 36.2vh);
+    width: calc(23.5vw + 33.2vh);
+    height: calc(18.2vw + 25.8vh);
+    margin-left: calc(24.3vw + 34.1vh);
     z-index: 1;
 }
 .inputs{
     display: flex;
     flex-direction: column;
-    gap: calc(0.5vw + 0.7vh)
+    gap: calc(0.5vw + 0.7vh);
 }
+
 .input{
     display: flex;
     flex-direction: column;
-    gap: calc(0.20vw + 0.29vh);
+    /* gap: calc(0.2vw + 0.2vh); */
 }
 button{
-    width: calc(13.9vw + 19.6vh);
-    height: calc(1.8vw + 2.6vh);
-    border-radius:calc(42vw + 60vh);
+    width: calc(10.7vw + 15.2vh);
+    height: calc(1.8vw + 2.5vh);
+    border-radius: 1234px;
     border: none;
     background-color: rgba(84, 60, 82, 1);
-    font-size:calc(0.55vw + 0.78vh);
+    font-size: calc(0.5vw + 0.7vh);
     color: white;
-    font-weight: 500;
 }
+
 button:hover{
     cursor: pointer;
     background-color: rgb(68, 48, 66);
     color: rgb(228, 228, 228);
 }
 .line{
-    margin-left: calc(6.3vw + 8.8vh);
-    width: calc(6vw + 8.3vh);
-    height: calc(0.03vw + 0.04vh);
+    width: calc(5.3vw + 7.5vh);
+    height: calc(0.06vw + 0.09vh);
     background-color: rgba(84, 60, 82, 1);
 }
 
 .authorithation-title{
-    color: rgba(129, 129, 141, 1)    ;
+    color: rgba(129, 129, 141, 1);
     font-weight: 500;
-    font-size: calc(1.2vw + 1.6vh);
-    height:calc(1.3vw + 1.9vh);
-    gap: calc(0.27vw + 0.4vh);
+    font-size: calc(1vw + 1.4vh);
+    height: calc(1.3vw + 1.9vh);
 }
+
 .authorithation-title:hover{
     color: rgb(104, 104, 112);
     cursor: pointer;
 }
 .registration-title{
-    font-size: calc(1.2vw + 1.6vh);
-    height: calc(1.3vw + 1.8vh);
-    font-weight: 700;
-    color: black;
-    text-decoration: underline;
+    font-size: calc(1vw + 1.4vh);
+    height: calc(1.3vw + 1.9vh);
+    border-bottom: 0.3vh #070A1C solid
 }
 
 input{
-    width: calc(13.9vw + 19.6vh);
     height: calc(1.4vw + 2vh);
     border-radius: calc(0.3vw + 0.4vh);
-    font-size: calc(0.5vw + 0.8vh);
-    padding: calc(0.5vw + 0.8vh) calc(0.3vw + 0.5vh);
-    border: calc(0.03vw + 0.05vh) black solid;
 }
+
 a{
     all: unset;
 }
 a:hover{
     cursor: pointer;
 }
+
+
 .join-qr{
     font-size: calc(0.5vw + 0.7vh);
     font-weight: 400;
@@ -125,24 +128,28 @@ a:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: calc(0.8vw + 1.7vh);
+    gap: calc(0.8vw + 1.1vh);
 }
 .label-qr{
-    width: calc(13vw + 18vh);
+    width: calc(13.8vw + 19.6vh);
     height: calc(0.6vw + 0.8vh);
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: calc(0.5vw + 0.7vh)
+    /* gap: calc(0.5vw + 0.7vh); */
 }
 .line-qr{
-    width: calc(1.9vw + 2.7vh);
-    height: calc(0.06vw + 0.08vh);
+    width: calc(1.9vw + 2.6vh);
+    height: calc(0.06vw + 0.09vh);
     background-color: rgba(129, 129, 141, 1);
 }
 li{
     color: red;
 }
+
+
+
+
 .id_email{
     font-weight: 500;
 }
@@ -150,6 +157,18 @@ li{
     width: calc(3.5vw + 4.9vh);
     height: calc(3.5vw + 4.9vh);
 }
+
 label{
-    font-size: calc(0.5vw + 0.8vh);
+    font-size: calc(0.5vw + 0.7vh);
+    font-weight: 400;
+}
+
+input{
+    font-size: calc(0.5vw + 0.7vh);
+    border: calc(0.03vw + 0.05vh) black solid;
+    
+}
+
+::placeholder{
+    font-size: calc(0.5vw + 0.7vh);
 }
