--- a/social_network/registration/templates/authorization/index.html
+++ b/social_network/registration/templates/authorization/index.html
@@ -28,7 +28,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <button type = "submit">Увійти</button>
+                    <button type = "submit" class="button-login">Увійти</button>
                 </div>
             </form>
             <div class = "qr">
