--- a/social_network/main/templates/edit/edit_form.html
+++ b/social_network/main/templates/edit/edit_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<!-- {% load static %}
+{% load static %}
 
 {% block content %}
 
@@ -56,6 +56,6 @@
     
 </div>
     
-{% endblock %} -->
+{% endblock %}
 
 
