--- a/social_network/main/static/css/style.css
+++ b/social_network/main/static/css/style.css
@@ -1,6 +1,9 @@
 *{
     scrollbar-width: none;  
 }
+body{
+    overflow-y: hidden;
+}
 .body{
     padding-top: calc(0.5vw + 0.8vh);
     padding-left: calc(2.7vw + 3.9vh);
@@ -804,25 +807,29 @@ a{
     height: calc(8vw + 11vh);
     border-radius: calc(0.5vw + 0.7vh);
 }
-.all_tags{
+.tag-container{
+    border: 0px white;
     display: flex;
     width: calc(23.8vw + 33.6vh);
     flex-wrap: wrap;
     gap: calc(0.3vw + 0.5vh);
+    
 }
-
-.tag-form{
+.tag-object{
+    width: min-content;
     padding: calc(0.2vw + 0.3vh);
-    background-color: #E9E5EE;
+    background-color: rgba(233, 229, 238, 1);
     border: 0px black solid;
     border-radius: calc(0.2vw + 0.3vh);
     gap: calc(0.3vw + 0.5vh);
     height:calc(0.9vw + 1.3vh);
-    color:#543C52;
+    color: rgba(84, 60, 82, 1);
     font-size: calc(0.4vw + 0.6vh);
     font-family: "GT Walsheim Pro";
+    background: #f0f0f0;
+    cursor: pointer;
 }
-.tag-form:hover{
+option:hover{
     background-color:#d3cbdd;
     cursor: pointer;
 }
@@ -835,4 +842,12 @@ a{
     all: unset;
     width: calc(0.7vw+1vh);
     height: calc(0.77vw+1vh);
+}
+
+.tag-object input {
+    display: none;
+}
+.tag-object:hover{
+    background-color: rgb(194, 192, 196);
+    color:rgb(101, 84, 100);
 }
