--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -241,21 +241,20 @@
                         
                         <div class = "redact-post-function hidden">
                             <div class="redact-form">
-                                <div class="cross-img cross-redact">
+                                <div class="cross-img">
                                     <img class="cross-redact" src="{% static 'images/icons/cross.png'%}" alt="">
                                 </div>
 
                                 <h1 class="title-form">Створення публікації</h1>
                                 <form method="post" action = "{% url 'edit' post.pk %}" class = "input-form"enctype="multipart/form-data">
                                     {% csrf_token %}
-
                                     {% for field in form %}
                                         {% if field.name == 'images' %}
                                             <div class="label-tag">
                                                 {{ field.label_tag }}
                                                 <div class="inputs-photo-emoji-form">
                                                     <div class="emojy-and-photo">
-                                                        <input type="file" name="picture" id="image-to-post-form" class = "image-to-post-form">
+                                                        <input multiple type="file" name="picture" id="image-to-post-form" class = "image-to-post-form">
                                                         
                                                         <label for="image-to-post-form" class = "image-icon-form-label">
                                                             <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
@@ -321,13 +320,11 @@
                                     <div class = "signature">
                                             <img src="" alt="">
                                     </div>
+
                                 </div>
                                 <div class = "dots dots-post">
-
-                                           
-
-                                </div>
-                                
+                                    <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
+                                </div>         
                                 </div>
                         
                             <div class = "body-post">
@@ -396,10 +393,11 @@
                             {{ field.label_tag }}
                             <div class="inputs-photo-emoji-form">
                                 <div class="emojy-and-photo">
-                                    {{field}}
+                                    
                                     <div class = "merge-image">
                                         <label for="image-to-post-form" class = "image-icon-form-label">
                                             <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
+                                            
                                         </label>
 
                                         <img class = "image-emoji-form" src="{% static 'images/icons/emoji.png' %}" alt="">
@@ -413,13 +411,18 @@
                         </div>
                         <div class="field-error">{{ field.errors }}</div>
                     {% elif field.name == "tags" %}
-                        <div class = "all_tags">
-                            {% for tag in tags %}
-                                <button class = "tag-form">{{tag.tag_name}}</button>
-                            {% endfor %}
-                            <button class = "button-hashtag">
-                                <img  class = "image-hashtag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
-                            </button>
+                        <div class = "all_tags">    
+                            <div class = "tag-container">
+                                {% for tag in tags %}
+                                <label class="tag-object" data-id="{{ tag.id }}">
+                                    {{ tag.tag_name}}
+                                    <input type="checkbox" name="tags" value="{{ tag.id }}">
+                                </label>
+                                {% endfor %}
+                                <button class = "button-hashtag">
+                                    <img  class = "image-hashtag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
+                                </button>
+                            </div>
                         </div>
                     {% else %}
                         <div class="inputs-form">
