--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class = "url">
                 <img src="{% static 'images/icons/settings.png' %}" alt="">
-                <a>Налаштування</a>
+                <a href="{% url 'user_settings' %}">Налаштування</a>
             </div>
         </div>
         <form action="{% url 'logout' %}" method = "post">
