Add html-code for user_settings.html

--- a/social_network/publications/templates/my_publications/index.html
+++ b/social_network/publications/templates/my_publications/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class = "url">
                 <img src="{% static 'images/icons/settings.png' %}" alt="">
-                <a>Налаштування</a>
+                <a href="{% url 'user_settings' %}">Налаштування</a>
             </div>
         </div>
         <div class = "button-exit">
