--- a/social_network/templates/base_header_main.html
+++ b/social_network/templates/base_header_main.html
@@ -12,27 +12,27 @@
         <div class = "hat">
             <div class="hat-wrapper">
                 {% block hat %}
-                    <img class = "logo" src="{% static 'images/icons/logo.png'%}" alt="">
+                    <img class = "logo" src="{% static 'images/icons/logo.png'%}" alt="" class="image-header">
                     <div class = "urls-frame">
                         <div class = "urls">
                             <div class = "main url">
-                                <img src="{% static 'images/icons/house.png'%}" alt="">
+                                <img src="{% static 'images/icons/house.png'%}" alt="" class="image-header">
                                 <a href = "{% url 'main' %}">Головна</a>
                             </div>
                             <div class = "url">
-                                <img src="{% static 'images/icons/post.png' %}" alt="">
+                                <img src="{% static 'images/icons/post.png' %}" alt="" class="image-header">
                                 <a href = "{% url 'my_pubs' %}">Мої публікації</a>
                             </div>
                             <div class = "url">
-                                <img src="{% static 'images/icons/friends.png' %}" alt="">
+                                <img src="{% static 'images/friends.png' %}" alt="" class="image-header friend">
                                 <a>Друзі</a>
                             </div>
                             <div class = "url">
-                                <img src="{% static 'images/icons/chats.png' %}" alt="">
+                                <img src="{% static 'images/icons/chats.png' %}" alt="" class="image-header">
                                 <a>Чати</a>
                             </div>
                             <div class = "url">
-                                <img src="{% static 'images/icons/settings.png' %}" alt="">
+                                <img src="{% static 'images/icons/settings.png' %}" alt="" class="image-header">
                                 <a href="{% url 'user_settings' %}">Налаштування</a>
                             </div>
                         </div>
