--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -254,7 +254,7 @@
                                                 {{ field.label_tag }}
                                                 <div class="inputs-photo-emoji-form">
                                                     <div class="emojy-and-photo">
-                                                        <input multiple type="file" name="picture" id="image-to-post-form" class = "image-to-post-form">
+                                                        {{ field }}
                                                         
                                                         <label for="image-to-post-form" class = "image-icon-form-label">
                                                             <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
@@ -269,6 +269,7 @@
                                                 </div>
                                             </div>
                                             <div class="field-error">{{ field.errors }}</div>
+
                                         {% else %}
                                             <div class="inputs-form">
                                                 <div class="label-tag">{{ field.label_tag }}</div>
@@ -292,7 +293,7 @@
                                         <img class = "image-redact" src="{% static 'images/icons/redact.png'%}" alt="">
 
 
-                                        <h1 class="redacting-title redacting-title-redact">Редагувати допис</h1>
+                                        <h1 class="redacting-title redacting-title-redact" id = "{{post.pk}}">Редагувати допис</h1>
                                     </div>    
                                     
                                         
@@ -393,7 +394,7 @@
                             {{ field.label_tag }}
                             <div class="inputs-photo-emoji-form">
                                 <div class="emojy-and-photo">
-                                    
+                                    {{ field }}
                                     <div class = "merge-image">
                                         <label for="image-to-post-form" class = "image-icon-form-label">
                                             <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
@@ -436,8 +437,8 @@
             </form>
         </div>
     </div>
-
 {% endblock %}
 {% block script %}
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src = "{% static 'js/script.js' %}"></script>
 {% endblock %}
