Creating design for personal information page

--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -187,7 +187,9 @@ p{
 input::placeholder{
     color: #81818D;
 }
-
+input{
+    font-size: calc(0.5vw + 0.8vh);
+}
 img.eye-img{
     width: calc(0.7vw + 1vh);
     height: calc(0.7vw + 1vh);
