--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -49,7 +49,7 @@
 
             <div class = "frame profile">
                 <div class = "avatar">
-                    <img class = "my-avatar" src="{% static 'images/icons/avatar.jpg'%}" alt="">
+                    <img class = "my-avatar" src="{% static 'images/icons/account.png'%}" alt="">
                 </div>
                 <div class = "nick-and-tag">
                     <h2 class = "name">{{request.user.username}}</h2>
