--- a/social_network/settings_app/templates/user_settings/user_settings.html
+++ b/social_network/settings_app/templates/user_settings/user_settings.html
@@ -29,8 +29,8 @@
 
                 <div class="main-profile">
                     <img src="{% static 'user_settings/images/account.png' %}" alt="" class="user-img">
-                    <p class="user-text">Lina Li</p>
-                    <p>@theliiii</p>
+                    <p class="user-text">{{request.user.username}}</p>
+                    <p>@{{request.user.username}}</p>
                 </div> 
                 
             </div>
@@ -47,14 +47,14 @@
                     <div class="little-div-edit">
                         <p class="edit-text">Ім'я</p>
                         <div class="input-div-edit">
-                            <input type="text" class="input-edit">
+                            <input type="text" class="input-edit" placeholder="{{request.user.username}}">
                             <img src="{% static 'user_settings/images/eye.png' %}" alt="" class="eye-img all">
                         </div>
                     </div>
                     <div class="little-div-edit">
                         <p class="edit-text">Прізвище</p>
                         <div class="input-div-edit">
-                            <input type="text" class="input-edit">
+                            <input type="text" class="input-edit" placeholder="{{request.user.username}}">
                             <img src="{% static 'user_settings/images/eye.png' %}" alt="" class="eye-img all">
                         </div>
                     </div>
@@ -62,14 +62,14 @@
                     <div class="little-div-edit">
                         <p class="edit-text">Дата народження</p>
                         <div class="input-div-edit">
-                            <input type="text" class="input-edit">
+                            <input type="text" class="input-edit" placeholder="add your date">
                             <img src="{% static 'user_settings/images/eye_close.png' %}" alt="" class="eye-img all">
                         </div>
                     </div>
                     <div class="little-div-edit">
                         <p class="edit-text">Електронна адреса</p>
                         <div class="input-div-edit">
-                            <input type="text" class="input-edit">
+                            <input type="text" class="input-edit" placeholder="you@example.com">
                             <img src="{% static 'user_settings/images/eye_close.png' %}" alt="" class="eye-img all">
                         </div>
                     </div>
