created design for albums.html

--- a/social_network/settings_app/templates/user_settings/user_settings.html
+++ b/social_network/settings_app/templates/user_settings/user_settings.html
@@ -14,7 +14,7 @@
     <div class="center">
         <div class="settings-links">
             <a href="{% url 'user_settings' %}" class="link one">Особиста інформація</a>
-            <p class="link two">Альбоми</p>
+            <a href="{% url 'albums' %}" class="link two">Альбоми</a>
         </div>
 
         <div class="main-card">
