--- a/social_network/templates/base_header_main.html
+++ b/social_network/templates/base_header_main.html
@@ -31,7 +31,7 @@
                                 <img src="{% static 'images/icons/chats.png' %}" alt="" class="image-header">
                                 <a>Чати</a>
                             </div>
-                            <div class = "url">
+                            <div class = "url settings">
                                 <img src="{% static 'images/icons/settings.png' %}" alt="" class="image-header">
                                 <a href="{% url 'user_settings' %}">Налаштування</a>
                             </div>
