--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -42,7 +42,7 @@ a.link.one{
     border-bottom: 0.3vh #070A1C solid
 }
 
-p.link.two{
+a.link.two{
     margin-top: calc(0.4vw + 0.6vh); 
     color: #81818D;
     font-weight: 500;
@@ -301,4 +301,13 @@ input.input-edit.password::placeholder{
     width: calc(4.5vw + 6.4vh);
     height: calc(1.7vw + 2.4vh);
     margin-top: calc(0.8vw + 1vh);
+}
+
+button:hover{
+    background-color: #E9E5EE;
+}
+
+div.url.settings{
+    background-color: #E9E5EE;
+    border-radius: calc(0.12vw + 0.14vh);
 }
